--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
-    "react-to-pdf": "^1.0.1"
+    "react-to-pdf": "^1.0.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
