--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-pdf/renderer": "^3.4.4",
     "antd": "^5.19.1",
     "axios": "^1.7.2",
+    "buffer": "^6.0.3",
     "core-js": "^3.38.1",
     "dayjs": "^1.11.12",
     "jspdf": "^2.5.2",
