--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jspdf-autotable": "^3.8.4",
     "moment-timezone": "^0.6.0",
     "react": "^18.3.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-to-pdf": "^1.0.1",
