--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.12",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "jsqr": "^1.4.0",
     "moment-timezone": "^0.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
