--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@airthium/react-pdf-table": "^0.9.36",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@react-pdf/renderer": "^3.4.4",
+    "@tanstack/react-query": "^5.87.1",
     "antd": "^5.19.1",
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
