--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@airthium/react-pdf-table": "^0.9.36",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@react-pdf/renderer": "^3.4.4",
-    "@tanstack/react-query": "^5.87.1",
+    "@tanstack/react-query": "^5.90.12",
     "antd": "^5.19.1",
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-to-pdf": "^1.0.1",
+    "react-window": "^2.2.3",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
